Add ability to specify namespace for SA creation
This commit adds the --sa-namespace option to argocd CLI as well
as changes to the API to support the same.

The change should be non-breaking as the default is still to use
the "kube-system" namespace.
